@@ -6,6 +6,7 @@ import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.Util;
+import net.minecraft.core.Holder;
 import net.minecraft.core.Registry;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.resources.ResourceKey;
@@ -51,10 +52,10 @@ public class Codecs {
 			.xmap(e -> e.map(Function.identity(), Function.identity()), Either::left))
 			.xmap(e -> e.map(Function.identity(), Function.identity()), Either::left);
 	
-	public static final Codec<Multimap<Attribute, AttributeModifier>> ATTRIBUTE_MULTIMAP = CodecHelper.multiMapCodec(BuiltInRegistries.ATTRIBUTE.byNameCodec(), AttributeModifier.CODEC);
+	public static final Codec<Multimap<Holder<Attribute>, AttributeModifier>> ATTRIBUTE_MULTIMAP = CodecHelper.multiMapCodec(BuiltInRegistries.ATTRIBUTE.holderByNameCodec(), AttributeModifier.CODEC);
 
 	public static final Codec<AABB> AABB = Codec.DOUBLE.listOf().comapFlatMap(
-			list -> Util.fixedSize(list, 6).map(doubles -> new AABB(doubles.get(0), doubles.get(1), doubles.get(2), doubles.get(3), doubles.get(4), doubles.get(5))),
+			list -> Util.fixedSize(list, 6).map(doubles -> new AABB(doubles.getFirst(), doubles.get(1), doubles.get(2), doubles.get(3), doubles.get(4), doubles.get(5))),
 			aabb -> List.of(aabb.minX, aabb.minY, aabb.minZ, aabb.maxX, aabb.maxY, aabb.maxZ)
 	);
 
