@@ -1,42 +1,41 @@
 package sirttas.dpanvil.api.predicate.block.match;
 
 import com.google.common.collect.ImmutableList;
-import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.network.chat.Component;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
 import sirttas.dpanvil.api.DPAnvilNames;
+import sirttas.dpanvil.api.predicate.block.BlockPosPredicateTooltipHelper;
 import sirttas.dpanvil.api.predicate.block.BlockPosPredicateType;
 import sirttas.dpanvil.api.predicate.block.IBlockPosPredicate;
 import sirttas.dpanvil.api.predicate.block.IBlockStatePredicate;
 
+import javax.annotation.Nonnull;
 import java.util.List;
 
-public final class MatchBlocksPredicate implements IBlockStatePredicate {
+public record MatchBlocksPredicate(
+		List<Block> blocks
+) implements IBlockStatePredicate {
 
 	public static final String NAME = "blocks";
-	public static final Codec<MatchBlocksPredicate> CODEC = RecordCodecBuilder.create(builder -> builder.group(
-			BuiltInRegistries.BLOCK.byNameCodec().listOf().fieldOf(DPAnvilNames.BLOCKS).forGetter(MatchBlocksPredicate::getBlocks)
+	public static final MapCodec<MatchBlocksPredicate> CODEC = RecordCodecBuilder.mapCodec(builder -> builder.group(
+			BuiltInRegistries.BLOCK.byNameCodec().listOf().fieldOf(DPAnvilNames.BLOCKS).forGetter(MatchBlocksPredicate::blocks)
 	).apply(builder, MatchBlocksPredicate::new));
 
-	private final List<Block> blocks;
-
 	public MatchBlocksPredicate(Block... blocks) {
-		this.blocks = ImmutableList.copyOf(blocks);
+		this(ImmutableList.copyOf(blocks));
 	}
 
 	public MatchBlocksPredicate(Iterable<Block> blocks) {
-		this.blocks = ImmutableList.copyOf(blocks);
+		this(ImmutableList.copyOf(blocks));
 	}
 
 	@Override
 	public boolean test(BlockState state) {
 		return blocks.stream().anyMatch(state::is);
-	}
-
-	public List<Block> getBlocks() {
-		return blocks;
 	}
 
 	@Override
@@ -49,11 +48,16 @@ public final class MatchBlocksPredicate implements IBlockStatePredicate {
 		if (blocks.isEmpty()) {
 			return IBlockPosPredicate.none();
 		} else if (blocks.size() == 1) {
-			return new MatchBlockPredicate(blocks.get(0));
+			return new MatchBlockPredicate(blocks.getFirst());
 		}
 		return new MatchBlocksPredicate(blocks.stream()
 				.distinct()
 				.toList());
 	}
-	
+
+	@Override
+	@Nonnull
+	public List<Component> getTooltip() {
+		return BlockPosPredicateTooltipHelper.or(blocks, b -> List.of(b.getName()));
+	}
 }
